@@ -5,3 +5,4 @@
 2024-05-28T13:19:27.648Z |            1.0.2 | custom badge + eslint upg.
 2024-05-28T13:27:49.623Z |            1.0.3 | fix
 2024-05-28T13:43:03.111Z |            1.1.0 | badge improvement
+2024-05-29T11:00:20.005Z |            1.1.1 | Badge improvements
